Fixed Text Alignment Issue The text inside the editible divs is now always going to be cetered

--- a/public/stylesheets/excersise_edit.css
+++ b/public/stylesheets/excersise_edit.css
@@ -84,6 +84,7 @@ body {
 	width: 100%;
 	height : 100px;
 
+	line-height: 100px;
 }
 
 /* Excersise container styling */
